fix: Alignment issue of company name in branch switcher

--- a/apps/web-giddh/src/app/shared/header/header.component.scss
+++ b/apps/web-giddh/src/app/shared/header/header.component.scss
@@ -852,6 +852,11 @@ ul.sub-list {
             }
             .go-to-company{
                 color: $deep-sky-blue;
+                &.company-label {
+                    flex-direction: column;
+                    justify-content: flex-start;
+                    align-items: flex-start;
+                }
             }
             div{
                 input{
